--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+@import url(//fonts.googleapis.com/css?family=Lato:100,300,400,700,800,900,1000,100italic,300italic,400italic,700italic,900italic);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400);
+body,
+html {
+    font-family: 'Lato', sans-serif;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    color: #000000;
+    font-size: 17px;
+}
+
+@media (min-width: 768px) {
+    .news-input {
+        width: 50%;
+    }
+}
+
 h1 {
     text-transform: uppercase;
 }
@@ -30,6 +47,17 @@ h5 {
 h6 {
     font-weight: bold;
     line-height: 20px;
+}
+
+p {
+    font-family: 'Open Sans', sans-serif;
+}
+
+p.intro {
+    font-size: 16px;
+    margin: 12px 0 0;
+    line-height: 24px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .row {
