--- a/src/Components/chatApp.css
+++ b/src/Components/chatApp.css
@@ -9,7 +9,7 @@ body {
 }
 
 .App header {
-    background-color: #181717;
+    background-color: #212529;
     height: 10vh;
     min-height: 50px;
     color: white;
@@ -30,7 +30,7 @@ body {
     flex-direction: column;
     justify-content: center;
     min-height: 100vh;
-    background-color: rgb(40, 37, 53);
+    background-color: #ffffff;
 }
 
 main {
