--- a/src/Components/chatApp.css
+++ b/src/Components/chatApp.css
@@ -1,14 +1,11 @@
-body {
-    background-color: #282c34;
-}
-
 .App {
     text-align: center;
     max-width: 728px;
     margin: 0 auto;
 }
 
-.App header {
+
+/* .App header {
     background-color: #212529;
     height: 10vh;
     min-height: 50px;
@@ -23,6 +20,7 @@ body {
     z-index: 99;
     padding: 10px;
     box-sizing: border-box;
+    text-align: center;
 }
 
 .App section {
@@ -30,10 +28,10 @@ body {
     flex-direction: column;
     justify-content: center;
     min-height: 100vh;
-    background-color: #ffffff;
-}
+    background-color: #212529;
+} */
 
-main {
+.main {
     padding: 10px;
     height: 80vh;
     margin: 10vh 0 10vh;
@@ -42,48 +40,52 @@ main {
     flex-direction: column;
 }
 
-main::-webkit-scrollbar {
+.main::-webkit-scrollbar {
     width: 0.25rem;
 }
 
-main::-webkit-scrollbar-track {
+.main::-webkit-scrollbar-track {
+    background: #f8f9fa;
+}
+
+.main::-webkit-scrollbar-thumb {
     background: #1e1e24;
+    border-radius: 2rem;
 }
 
-main::-webkit-scrollbar-thumb {
-    background: #6649b8;
-}
-
-form {
-    height: 10vh;
-    position: fixed;
+.form {
+    /* height: 10vh; */
+    position: relative;
     bottom: 0;
-    background-color: rgb(24, 23, 23);
+    /* background-color: rgb(24, 23, 23); */
     width: 100%;
     max-width: 728px;
     display: flex;
     font-size: 1.5rem;
 }
 
-form button {
+
+/* .form button {
     width: 20%;
     background-color: rgb(56, 56, 143);
-}
+} */
 
-input {
+.inp {
     line-height: 1.5;
-    width: 100%;
-    font-size: 1.5rem;
-    background: rgb(58, 58, 58);
-    color: white;
+    width: 90%;
+    font-size: 1rem;
+    /* background: rgb(58, 58, 58); */
+    /* color: white; */
     outline: none;
     border: none;
     padding: 0 10px;
+    border-radius: .75rem;
+    background: ffffff;
 }
 
-button {
+
+/* .ButtonSend {
     background-color: #282c34;
-    /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -92,34 +94,28 @@ button {
     display: inline-block;
     cursor: pointer;
     font-size: 1.25rem;
-}
+} */
 
 button:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
 
-.sign-in {
-    color: #282c34;
-    background: white;
-    max-width: 400px;
-    margin: 0 auto;
-}
 
-ul,
+/* ul,
 li {
     text-align: left;
     list-style: none;
-}
+} */
 
-p {
+.para {
     max-width: 500px;
     margin-bottom: 12px;
     line-height: 24px;
     padding: 10px 20px;
     border-radius: 25px;
     position: relative;
-    color: white;
+    /* color: white; */
     text-align: center;
 }
 
@@ -132,18 +128,19 @@ p {
     flex-direction: row-reverse;
 }
 
-.sent p {
+
+/* .sent p {
     color: white;
-    background: #0b93f6;
+    background: #212529;
     align-self: flex-end;
 }
 
 .received p {
-    background: #e5e5ea;
+    background: #f8f9fa;
     color: black;
-}
+} */
 
-img {
+.profphoto {
     width: 40px;
     height: 40px;
     border-radius: 50%;
