--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,800,900,1000,100italic,300italic,400italic,700italic,900italic');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400');
+
 body,
 html {
+    max-width: 44rem !important;
+    margin: 0 auto !important;
     font-family: 'Lato', sans-serif;
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
