Updated Entire UI and modified other pages

--- a/src/Components/chatApp.css
+++ b/src/Components/chatApp.css
@@ -80,7 +80,7 @@
     border: none;
     padding: 0 10px;
     border-radius: .75rem;
-    background: ffffff;
+    background: #ffffff !important;
 }
 
 
