--- a/src/Components/chatApp.css
+++ b/src/Components/chatApp.css
@@ -75,7 +75,7 @@
     width: 90%;
     font-size: 1rem;
     /* background: rgb(58, 58, 58); */
-    /* color: white; */
+    color: black;
     outline: none;
     border: none;
     padding: 0 10px;
