--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,6 +15,10 @@
         --text-var: #0d1117;
     }
 
+    a:hover {
+        color: #6c63ff;
+    }
+
     .prbt {
         background-color: #fff;
         border-color: #6c63ff;
@@ -50,6 +54,10 @@
         --scroll-bar-color: #0d1117;
         --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
         --text-var: #FFFFFF;
+    }
+
+    a:hover {
+        color: #6c63ff;
     }
 
     .cdin {
