--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,6 +12,7 @@
         --foot-text-color: black;
         --scroll-bar-color: hsl(var(--hue-color), 12%, 100%);
         --scroll-thumb-color: hsl(var(--hue-color), 12%, 90%);
+        --scroll-thumb-hover-color: hsl(var(--hue-color), 12%, 80%);
         --text-var: #0d1117;
     }
 
@@ -34,6 +35,7 @@
     .text-var {
         color: var(--text-var);
     }
+
 }
 
 
@@ -53,6 +55,7 @@
         --foot-text-color: #ffffff;
         --scroll-bar-color: #0d1117;
         --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+        --scroll-thumb-hover-color: hsl(var(--hue-color), 12%, 26%);
         --text-var: #FFFFFF;
     }
 
@@ -133,5 +136,5 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--text-color-light);
+    background-color: var(--scroll-thumb-hover-color);
 }
