--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -71,3 +71,16 @@ p.intro {
     background: transparent;
     border-top: 0px;
 }
+
+.loader {
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* height: 100%; */
+    min-height: 80vh;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
