--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -1,3 +1,12 @@
+@media screen and (max-width: 2700px) {
+    .mainc {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+}
+
+
 @media screen and (max-width: 1565px) {
     .body {
         font-weight: 400;
