--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -124,7 +124,7 @@ body {
     color: var(--body-color);
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: .60rem;
     background-color: var(--scroll-bar-color);
     border-radius: .5rem;
@@ -137,4 +137,4 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background-color: var(--scroll-thumb-hover-color);
-}
+} */
