--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: light) {
     :root {
-        color-scheme: dark;
+        color-scheme: light;
         --hue-color: 243;
         --body-bg: #FFFFFF;
         --body-color: #0d1117;
@@ -130,7 +130,7 @@ body {
 }
 
 /* ::-webkit-scrollbar {
-    width: .60rem;
+    width: .6rem;
     background-color: var(--scroll-bar-color);
     border-radius: .5rem;
 }
