--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -10,13 +10,141 @@ html {
     -webkit-font-smoothing: antialiased !important;
     color: #000000;
     font-size: 17px;
-    font-display: swap;
+
+    @font-face {
+        font-display: swap;
+    }
 }
 
-@media (min-width: 768px) {
-    .news-input {
-        width: 50%;
+@media (prefers-color-scheme: light) {
+    :root {
+        color-scheme: light;
+        --hue-color: 243;
+        --body-bg: #FFFFFF;
+        --body-color: #0d1117;
+        --head-text-color: #6c63ff;
+        --card--bg: #FFFFFF;
+        --card--text: #888888;
+        --card--head: #0d1117;
+        --dash--bg: #fff;
+        --foot-text-color: black;
+        --scroll-bar-color: hsl(var(--hue-color), 12%, 100%);
+        --scroll-thumb-color: hsl(var(--hue-color), 12%, 90%);
+        --scroll-thumb-hover-color: hsl(var(--hue-color), 12%, 80%);
+        --text-var: #0d1117;
     }
+
+    a:hover {
+        color: #6c63ff;
+    }
+
+    .prbt {
+        background-color: #fff;
+        border-color: #6c63ff;
+        color: black;
+    }
+
+    .prbt:hover {
+        background-color: #6c63ff;
+        border-color: #6c63ff;
+        color: white;
+    }
+
+    .text-var {
+        color: var(--text-var);
+    }
+
+}
+
+
+/* Dark mode */
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        color-scheme: dark;
+        --hue-color: 243;
+        --body-bg: #0d1117;
+        --body-color: #FFFFFF;
+        --head-text-color: #ffffff;
+        --card--bg: #0d1117;
+        --card--text: #FFFFFF;
+        --card--head: #FFFFFF;
+        --dash--bg: #0d1117;
+        --foot-text-color: #ffffff;
+        --scroll-bar-color: #0d1117;
+        --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+        --scroll-thumb-hover-color: hsl(var(--hue-color), 12%, 26%);
+        --text-var: #FFFFFF;
+    }
+
+    a:hover {
+        color: #6c63ff;
+    }
+
+    .cdin {
+        text-decoration-color: white;
+    }
+
+    .navx {
+        color: #fff;
+    }
+
+    .prbt {
+        background-color: #1a1a1a;
+        border-color: #6c63ff;
+        color: white;
+    }
+
+    .prbt:hover {
+        background-color: #6c63ff;
+        border-color: #6c63ff;
+        color: white;
+    }
+
+    srch {
+        background-color: #1a1a1a;
+        color: white;
+    }
+
+    .text-var {
+        color: var(--text-var);
+    }
+}
+
+.cdx {
+    background-color: var(--card--bg);
+    color: var(--card--text);
+}
+
+.cdt {
+    color: var(--card--head);
+}
+
+.head {
+    color: var(--head-text-color);
+}
+
+.cdin {
+    background-color: var(--dash--bg);
+}
+
+.foot {
+    color: var(--foot-text-color);
+}
+
+.cdb {
+    background-color: var(--body-bg);
+    color: var(--body-color);
+}
+
+body {
+    background: var(--body-bg);
+    color: var(--body-color);
+}
+
+.ufo {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
 
 h1 {
@@ -85,3 +213,93 @@ p.intro {
     justify-content: center;
     align-items: center;
 }
+
+
+@media (min-width: 768px) {
+    .news-input {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 2700px) {
+    .mainc {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+}
+
+
+@media screen and (max-width: 1565px) {
+    .body {
+        font-weight: 400;
+    }
+
+    .mainc {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    .navx {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    .heading {
+        font-size: 4.5rem !important;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .body {
+        font-weight: 400;
+    }
+
+    .mainc {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .heading {
+        font-size: 3.5rem !important;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .body {
+        font-weight: 400;
+    }
+
+    .mainc {
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+
+    .heading {
+        font-size: 3.5rem !important;
+    }
+}
+
+.heading {
+    font-size: 5.5rem;
+}
+
+.notes-link {
+    text-decoration: none;
+}
+
+/* ::-webkit-scrollbar {
+    width: .6rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--scroll-thumb-hover-color);
+} */
